Fix spacing

--- a/website/src/app/faq/page.module.css
+++ b/website/src/app/faq/page.module.css
@@ -33,10 +33,10 @@
 .mainContent .h2 {
     font-size: calc(5rem + 20vw);
     font-weight: 100;
-    margin-bottom: calc(2rem + 8vw);
 }
 
 .mainContent .h3 {
     font-size: calc(1rem + 1vw);
-    margin-bottom: 16px;
+    margin-bottom: 32px;
+    margin-top: calc(80px + 1vw);
 }
